--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,19 +1,24 @@
 {
-    "expo": {
-        "name": "SmartCart",
-        "slug": "smartcart",
-        "version": "1.0.0",
-        "orientation": "portrait",
-        "userInterfaceStyle": "automatic",
-        "assetBundlePatterns": [
-            "**/*"
-        ],
-        "ios": {
-            "supportsTablet": true,
-            "bundleIdentifier": "com.smartcart.app"
-        },
-        "android": {
-            "package": "com.smartcart.app"
-        }
+  "expo": {
+    "name": "SmartCart",
+    "slug": "smartcart",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "userInterfaceStyle": "automatic",
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.smartcart.app"
+    },
+    "android": {
+      "package": "com.smartcart.app"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "a11f7efa-c6f2-4453-84ef-698e261ac83e"
+      }
     }
+  }
 }
